<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_bottom_nav_calendar"
        android:icon="@drawable/ic_bottom_calendar"
        android:title="@string/bottom_nav_calendar" />

    <item
        android:id="@+id/main_bottom_nav_todo"
        android:icon="@drawable/ic_bottom_planner"
        android:title="@string/bottom_nav_todo" />

    <item
        android:id="@+id/main_bottom_nav_feed"
        android:icon="@drawable/ic_common_cloud"
        android:title="@string/bottom_nav_feed" />

    <item
        android:id="@+id/main_bottom_nav_group"
        android:icon="@drawable/ic_bottom_group"
        android:title="@string/bottom_nav_group" />

    <item
        android:id="@+id/main_bottom_nav_settings"
        android:icon="@drawable/ic_bottom_settings"
        android:title="@string/bottom_nav_settings" />
</menu>