<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.chunbae.narchive.presentation.ui.write.diary.normal.view.WriteNormalDiaryActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/write_diary_normal_layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:includeFontPadding="false"
                android:text="@string/toolbar_normal_diary"
                android:textColor="@color/text_black"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_20"
                android:src="@drawable/ic_common_plane"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:fillViewport="false"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/write_diary_normal_layout_toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/write_diary_normal_tv_location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_25"
                    android:fontFamily="@font/pretendard_semibold"
                    android:includeFontPadding="false"
                    android:text="@string/add_location_title"
                    android:textColor="@color/text_black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/write_diary_normal_tv_location_script"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:fontFamily="@font/pretendard_semibold"
                    android:includeFontPadding="false"
                    android:text="@string/add_location_script"
                    android:textColor="@color/color_a4a4a4"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/write_diary_normal_tv_location_title"
                    app:layout_constraintTop_toBottomOf="@id/write_diary_normal_tv_location_title" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/write_diary_normal_layout_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> activity.getLocation()}"
                    android:layout_marginHorizontal="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_12"
                    android:background="@drawable/bg_write_book_movie_upload_image"
                    app:layout_constraintTop_toBottomOf="@id/write_diary_normal_tv_location_script">

                    <ImageView
                        android:id="@+id/write_diary_normal_iv_location_marker"
                        android:layout_width="12dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="@dimen/margin_10"
                        android:layout_marginTop="@dimen/margin_7"
                        android:src="@drawable/ic_common_marker"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/write_diary_normal_tv_location_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_7"
                        android:fontFamily="@font/pretendard_semibold"
                        android:includeFontPadding="false"
                        android:text="@string/add_location_plz"
                        android:textColor="@color/text_black"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="@id/write_diary_normal_iv_location_marker"
                        app:layout_constraintStart_toEndOf="@id/write_diary_normal_iv_location_marker"
                        app:layout_constraintTop_toTopOf="@id/write_diary_normal_iv_location_marker" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/margin_7"
                        android:fontFamily="@font/pretendard_medium"
                        android:includeFontPadding="false"
                        android:textColor="@color/color_a4a4a4"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/write_diary_normal_tv_location_name"
                        app:layout_constraintTop_toBottomOf="@id/write_diary_normal_tv_location_name"
                        tools:text="서울특별시 광진구 뚝섬로27길 48" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/write_diary_normal_view_divider1"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="@color/color_f9f9f9"
                    app:layout_constraintTop_toBottomOf="@id/write_diary_normal_layout_location" />

                <TextView
                    android:id="@+id/write_diary_normal_tv_image_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:fontFamily="@font/pretendard_semibold"
                    android:includeFontPadding="false"
                    android:text="@string/add_photo"
                    android:textColor="@color/text_black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/write_diary_normal_tv_location_title"
                    app:layout_constraintTop_toBottomOf="@id/write_diary_normal_view_divider1" />

                <TextView
                    android:id="@+id/write_diary_normal_tv_image_script"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:fontFamily="@font/pretendard_medium"
                    android:includeFontPadding="false"
                    android:text="@string/add_photo_script"
                    android:textColor="@color/color_a4a4a4"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/write_diary_normal_tv_image_title"
                    app:layout_constraintTop_toBottomOf="@id/write_diary_normal_tv_image_title" />

                <TextView
                    android:id="@+id/write_diary_normal_tv_image_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_7"
                    android:fontFamily="@font/pretendard_medium"
                    android:includeFontPadding="false"
                    android:text="@string/add_photo_count"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/write_diary_normal_tv_image_script"
                    app:layout_constraintTop_toBottomOf="@id/write_diary_normal_tv_image_script" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/write_diary_normal_rv_images"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_10"
                    android:maxHeight="80dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="@+id/write_diary_normal_tv_image_count"
                    app:layout_constraintTop_toBottomOf="@+id/write_diary_normal_tv_image_count" />

                <View
                    android:id="@+id/write_diary_normal_view_divider2"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="@color/color_f9f9f9"
                    app:layout_constraintTop_toBottomOf="@id/write_diary_normal_rv_images" />

                <TextView
                    android:id="@+id/write_diary_normal_tv_diary_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:fontFamily="@font/pretendard_semibold"
                    android:includeFontPadding="false"
                    android:text="@string/add_diary_normal_title"
                    android:textColor="@color/text_black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/write_diary_normal_tv_location_title"
                    app:layout_constraintTop_toBottomOf="@id/write_diary_normal_view_divider2" />

                <EditText
                    android:id="@+id/write_book_movie_review_edt_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_15"
                    android:layout_marginTop="@dimen/margin_15"
                    android:background="@drawable/bg_write_book_movie_upload_image"
                    android:fontFamily="@font/pretendard_medium"
                    android:gravity="start"
                    android:hint="@string/write_review_here"
                    android:includeFontPadding="false"
                    android:minHeight="150dp"
                    android:padding="10dp"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/color_a4a4a4"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/write_diary_normal_tv_diary_title"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>