<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="activity"
            type="com.chunbae.narchive.presentation.ui.write.diary.simple.view.WriteSimpleDiaryActivity" />

        <variable
            name="viewModel"
            type="com.chunbae.narchive.presentation.ui.write.diary.simple.viewmodel.WriteSimpleDiaryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/write_diary_simple_layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:includeFontPadding="false"
                android:text="@string/toolbar_simple_diary"
                android:textColor="@color/text_black"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_20"
                android:src="@drawable/ic_common_plane"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/write_diary_simple_tv_keyword_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_25"
            android:fontFamily="@font/pretendard_semibold"
            android:includeFontPadding="false"
            android:text="@string/add_keyword_diary_title"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_layout_toolbar" />

        <TextView
            android:id="@+id/write_diary_simple_tv_keyword_script"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_keyword_diary_script"
            android:textColor="@color/color_a4a4a4"
            android:textSize="12sp"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/margin_5"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_tv_keyword_title"
            app:layout_constraintStart_toStartOf="@id/write_diary_simple_tv_keyword_title" />


        <EditText
            android:id="@+id/write_diary_simple_edt_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.userInputContent}"
            android:textSize="14sp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/color_a4a4a4"
            android:maxLength='@{viewModel.userInputKeywords.size() > 10 ? viewModel.userInputContent.length() : Integer.MAX_VALUE}'
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:hint="@string/write_review_here"
            android:layout_margin="@dimen/margin_20"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_tv_keyword_script" />

        <View
            android:id="@+id/write_diary_simple_view_edt_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/color_a4a4a4"
            android:layout_marginTop="@dimen/margin_7"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_edt_keyword"
            app:layout_constraintStart_toStartOf="@id/write_diary_simple_edt_keyword"
            app:layout_constraintEnd_toEndOf="@id/write_diary_simple_edt_keyword" />

        <TextView
            android:id="@+id/write_diary_simple_tv_keyword_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/over_keyword_limit"
            android:textSize="11sp"
            android:textColor="@color/color_FF0000"
            android:visibility='@{viewModel.userInputKeywords.size() > 10 ? View.VISIBLE : View.GONE}'
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/margin_3"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_view_edt_divider"
            app:layout_constraintStart_toStartOf="@id/write_diary_simple_view_edt_divider" />

        <View
            android:id="@+id/write_diary_simple_view_divider1"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@color/color_f9f9f9"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_tv_keyword_error" />

        <TextView
            android:id="@+id/write_diary_simple_tv_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_15"
            android:fontFamily="@font/pretendard_semibold"
            android:includeFontPadding="false"
            android:text="@string/add_location_title"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_view_divider1" />

        <TextView
            android:id="@+id/write_diary_simple_tv_location_script"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/pretendard_semibold"
            android:includeFontPadding="false"
            android:text="@string/add_location_script"
            android:textColor="@color/color_a4a4a4"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/write_diary_simple_tv_location_title"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_tv_location_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/write_diary_simple_layout_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_12"
            android:background="@drawable/bg_write_book_movie_upload_image"
            android:onClick="@{() -> activity.getLocation()}"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_tv_location_script">

            <ImageView
                android:id="@+id/write_diary_simple_iv_location_marker"
                android:layout_width="12dp"
                android:layout_height="16dp"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:src="@drawable/ic_common_marker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/write_diary_simple_tv_location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_7"
                android:fontFamily="@font/pretendard_semibold"
                android:includeFontPadding="false"
                android:text="@{viewModel.selectedLocation == null ? @string/add_location_plz : viewModel.selectedLocation.place_name}"
                android:textColor="@color/text_black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/write_diary_simple_iv_location_marker"
                app:layout_constraintStart_toEndOf="@id/write_diary_simple_iv_location_marker"
                app:layout_constraintTop_toTopOf="@id/write_diary_simple_iv_location_marker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_3"
                android:layout_marginBottom="@dimen/margin_7"
                android:fontFamily="@font/pretendard_medium"
                android:includeFontPadding="false"
                android:text="@{viewModel.selectedLocation == null ? null : viewModel.selectedLocation.road_address_name}"
                android:textColor="@color/color_a4a4a4"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/write_diary_simple_tv_location_name"
                app:layout_constraintTop_toBottomOf="@id/write_diary_simple_tv_location_name"
                tools:text="서울특별시 광진구 뚝섬로27길 48" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/write_diary_simple_view_divider2"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@color/color_f9f9f9"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_layout_location" />

        <TextView
            android:id="@+id/write_diary_simple_tv_image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:fontFamily="@font/pretendard_semibold"
            android:includeFontPadding="false"
            android:text="@string/add_photo"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/write_diary_simple_tv_location_title"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_view_divider2" />

        <TextView
            android:id="@+id/write_diary_simple_tv_image_script"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:text="@string/add_photo_script"
            android:textColor="@color/color_a4a4a4"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/write_diary_simple_tv_image_title"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_tv_image_title" />

        <TextView
            android:id="@+id/write_diary_simple_tv_image_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_7"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false"
            android:text="@{@string/add_photo_count(viewModel.selectedImages.size)}"
            android:textColor="@color/text_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/write_diary_simple_tv_image_script"
            app:layout_constraintTop_toBottomOf="@id/write_diary_simple_tv_image_script" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/write_diary_simple_btn_add_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/margin_20"
            android:background="@drawable/bg_write_book_movie_upload_image"
            android:visibility="@{viewModel.selectedImages == null ? View.VISIBLE : View.GONE}"
            android:onClick="@{() -> activity.openGalleryActivity()}"
            app:layout_constraintStart_toStartOf="@id/write_diary_simple_rv_images"
            app:layout_constraintTop_toTopOf="@id/write_diary_simple_rv_images">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_write_book_movie_add_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/write_diary_simple_rv_images"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/margin_10"
            android:maxHeight="80dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layout_constraintHorizontal_bias="0"
            android:paddingStart="@dimen/margin_20"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/write_diary_simple_tv_image_count" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>